[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-proxy-py"
version = "0.1.0"
description = "Edge/IoT adaptive reverse proxy with policy routing, caching, and offline-aware fallback."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Kubenew"}]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
  "prometheus-client>=0.20.0",
]

[project.scripts]
edge-proxy = "edge_proxy_py.cli:app"
